--- a/public/common/styles/messageBody.styl
+++ b/public/common/styles/messageBody.styl
@@ -25,7 +25,14 @@
 @media (min-width: $mobileWidth) {
   .audio-custom-class {
     min-width: 480px
+    height: 360px
   }
+
+  audio.audio-custom-class {
+    min-width: 640px
+    height: unset
+  }
+
 }
 
 .iframe-custom-class {
@@ -91,6 +98,7 @@
 
 .media-in-message-wrapper-audio {
   height: unset !important
+  display: block;
 }
 
 // open in player button
